feat<java>: update jvm chapter